# SEE_TP3-4

./: meson.build
lib/: posix_helper.c  posix_helper.h
src/: gen_vec_file.c  posix1.c  posix2.c  posix3.c  posix4.c  posix5.c  pthread1.c  pthread2.c
test_files/: p4.txt  p4_2.txt
tests/: p4_1.txt
